# ondc-rl-rnv

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.kiro/specs/ondc-agent-env/: .config.kiro  design.md  requirements.md  tasks.md
api/: main.py
frontend/: app.js  index.html  styles.css
ondc_env/: __init__.py  env.py  reward_system.py  seller_simulator.py  task_engine.py  types.py
scripts/: run_demo.py  train.py
server/: app.py
tests/: test_api.py  test_api_properties.py  test_env_properties.py  test_env_reset.py  test_env_step.py  test_reward_system.py  test_seller_simulator.py  test_step_properties.py  test_task_engine.py
