[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ondc-rl-simulator"
version = "1.0.0"
description = "ONDC Agent Environment"
authors = [
    { name = "Rewa" }
]
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "rich>=13.0.0",
    "openai>=1.0.0"
]
